[gd_scene load_steps=68 format=3 uid="uid://yjah0q8d3uuc"]

[ext_resource type="Script" uid="uid://dyeumabcobntd" path="res://Mae/scripts/player.gd" id="1_2ty8w"]
[ext_resource type="Script" uid="uid://cakuaaegcnr5d" path="res://PlayerStateMachine.gd" id="2_rx0ls"]
[ext_resource type="Script" uid="uid://d1gtpgqtwqy1j" path="res://Mae/scripts/kat_being_state.gd" id="3_i0f03"]
[ext_resource type="Script" uid="uid://cvtu2s0fobk8u" path="res://Mae/scripts/mae_being_state.gd" id="4_d3xhf"]
[ext_resource type="Script" uid="uid://buipq8x5k701o" path="res://Mae/scripts/idle_doing_state.gd" id="5_b4th5"]
[ext_resource type="Script" uid="uid://cwsffl8hvpoi7" path="res://Mae/scripts/jump_doing_state.gd" id="6_uwlk8"]
[ext_resource type="Script" uid="uid://c5mrkia2sd8ln" path="res://Mae/scripts/move_doing_state.gd" id="7_56usy"]
[ext_resource type="Texture2D" uid="uid://noxxosyn03j7" path="res://Mae/Assets/Bug2-walk.png" id="8_xj186"]
[ext_resource type="Texture2D" uid="uid://bi1ji6s268qm8" path="res://Mae/Assets/kat_idle.png" id="9_fkm6p"]
[ext_resource type="Texture2D" uid="uid://bmjt7c4imf34m" path="res://Mae/Assets/knight.png" id="10_eooh1"]
[ext_resource type="Texture2D" uid="uid://bh6il0yg16aem" path="res://Mae/Assets/kat_walking.png" id="11_tch8c"]
[ext_resource type="Texture2D" uid="uid://dpvajkyxm8b2q" path="res://Mae/Assets/Bug2-idle.png" id="12_2upko"]
[ext_resource type="Texture2D" uid="uid://cf5ktetqrrw4r" path="res://Mae/Assets/slime_green.png" id="13_kg5ai"]
[ext_resource type="Texture2D" uid="uid://b2ad6ihp1qeft" path="res://Mae/Assets/Poof.png" id="14_k45ae"]
[ext_resource type="Script" uid="uid://dp43eq8w4mchl" path="res://Kat/Scripts/debug_text.gd" id="15_psrc6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqet3"]
size = Vector2(65, 121)

[sub_resource type="AtlasTexture" id="AtlasTexture_13a2c"]
atlas = ExtResource("8_xj186")
region = Rect2(240, 240, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_siwhu"]
atlas = ExtResource("8_xj186")
region = Rect2(240, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0h2d"]
atlas = ExtResource("8_xj186")
region = Rect2(0, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_y74j4"]
atlas = ExtResource("8_xj186")
region = Rect2(0, 240, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_el80n"]
atlas = ExtResource("9_fkm6p")
region = Rect2(0, 0, 540, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij15k"]
atlas = ExtResource("9_fkm6p")
region = Rect2(540, 0, 540, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_136gd"]
atlas = ExtResource("10_eooh1")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w70u5"]
atlas = ExtResource("10_eooh1")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpv3a"]
atlas = ExtResource("10_eooh1")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu3gv"]
atlas = ExtResource("10_eooh1")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsujc"]
atlas = ExtResource("10_eooh1")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jec4m"]
atlas = ExtResource("10_eooh1")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f4d2"]
atlas = ExtResource("10_eooh1")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fixto"]
atlas = ExtResource("10_eooh1")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4xdl"]
atlas = ExtResource("11_tch8c")
region = Rect2(0, 0, 525, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm2ej"]
atlas = ExtResource("11_tch8c")
region = Rect2(525, 0, 525, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv7ew"]
atlas = ExtResource("11_tch8c")
region = Rect2(0, 960, 525, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pqi8"]
atlas = ExtResource("11_tch8c")
region = Rect2(525, 960, 525, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_plpt1"]
atlas = ExtResource("9_fkm6p")
region = Rect2(0, 0, 270, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8y3m"]
atlas = ExtResource("9_fkm6p")
region = Rect2(270, 0, 270, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk7gc"]
atlas = ExtResource("12_2upko")
region = Rect2(0, 0, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo3ox"]
atlas = ExtResource("12_2upko")
region = Rect2(481, 0, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gmsk"]
atlas = ExtResource("12_2upko")
region = Rect2(0, 481, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnrud"]
atlas = ExtResource("12_2upko")
region = Rect2(481, 481, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggk7y"]
atlas = ExtResource("13_kg5ai")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa1wm"]
atlas = ExtResource("13_kg5ai")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3qb7"]
atlas = ExtResource("13_kg5ai")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xun2t"]
atlas = ExtResource("13_kg5ai")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f58qx"]
atlas = ExtResource("8_xj186")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_natsk"]
atlas = ExtResource("8_xj186")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkiv8"]
atlas = ExtResource("8_xj186")
region = Rect2(0, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_sel8t"]
atlas = ExtResource("14_k45ae")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_61uy4"]
atlas = ExtResource("14_k45ae")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryemh"]
atlas = ExtResource("14_k45ae")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7t1o"]
atlas = ExtResource("14_k45ae")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrjs5"]
atlas = ExtResource("14_k45ae")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7rch"]
atlas = ExtResource("14_k45ae")
region = Rect2(256, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_vhoju"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13a2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siwhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0h2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y74j4")
}],
"loop": true,
"name": &"KatDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_el80n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij15k")
}],
"loop": true,
"name": &"KatIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_136gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w70u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpv3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu3gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsujc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jec4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f4d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fixto")
}],
"loop": true,
"name": &"KatJump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4xdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm2ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv7ew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pqi8")
}],
"loop": true,
"name": &"KatMove",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plpt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8y3m")
}],
"loop": true,
"name": &"KatUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk7gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo3ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gmsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnrud")
}],
"loop": true,
"name": &"MaeIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggk7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa1wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3qb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xun2t")
}],
"loop": true,
"name": &"MaeJump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f58qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_natsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkiv8")
}],
"loop": true,
"name": &"MaeMove",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sel8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61uy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryemh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7t1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrjs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7rch")
}],
"loop": true,
"name": &"Poof",
"speed": 20.0
}]

[sub_resource type="GDScript" id="GDScript_jk8u8"]
script/source = "extends AnimatedSprite2D
"

[sub_resource type="AtlasTexture" id="AtlasTexture_muk56"]
atlas = ExtResource("14_k45ae")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvq1g"]
atlas = ExtResource("14_k45ae")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnpie"]
atlas = ExtResource("13_kg5ai")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnppg"]
atlas = ExtResource("13_kg5ai")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1tgl"]
atlas = ExtResource("13_kg5ai")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyp3i"]
atlas = ExtResource("13_kg5ai")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2ww4"]
atlas = ExtResource("13_kg5ai")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_epdp1"]
atlas = ExtResource("13_kg5ai")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m36e"]
atlas = ExtResource("13_kg5ai")
region = Rect2(48, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_f6adi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muk56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvq1g")
}],
"loop": true,
"name": &"Arm",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnpie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnppg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1tgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyp3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2ww4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epdp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m36e")
}],
"loop": true,
"name": &"Reloading",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i08o8"]
size = Vector2(27.352, 75.2885)

[sub_resource type="LabelSettings" id="LabelSettings_8kpaj"]

[node name="Player" type="CharacterBody2D"]
position = Vector2(-14, -35)
script = ExtResource("1_2ty8w")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-48, 35)

[node name="Enemy_Kill_Zone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Kill_Zone"]
position = Vector2(-14.5, 8.5)
shape = SubResource("RectangleShape2D_oqet3")

[node name="AttackStateMachine" type="Node" parent="."]

[node name="KatAttackState" type="Node" parent="AttackStateMachine"]

[node name="MaeAttackState" type="Node" parent="AttackStateMachine"]

[node name="BeingStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_rx0ls")
current_state = NodePath("KatBeingState")

[node name="KatBeingState" type="Node" parent="BeingStateMachine"]
script = ExtResource("3_i0f03")

[node name="MaeBeingState" type="Node" parent="BeingStateMachine"]
script = ExtResource("4_d3xhf")

[node name="DoingStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_rx0ls")
current_state = NodePath("IdleDoingState")

[node name="IdleDoingState" type="Node" parent="DoingStateMachine"]
script = ExtResource("5_b4th5")

[node name="JumpDoingState" type="Node" parent="DoingStateMachine"]
script = ExtResource("6_uwlk8")

[node name="MoveDoingState" type="Node" parent="DoingStateMachine"]
script = ExtResource("7_56usy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-12, 17)
scale = Vector2(0.14375, 0.14375)
sprite_frames = SubResource("SpriteFrames_vhoju")
animation = &"Poof"
autoplay = "KatIdle"
script = SubResource("GDScript_jk8u8")

[node name="Arm" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
position = Vector2(-320, 90.4348)
scale = Vector2(23.352, 19.4564)
sprite_frames = SubResource("SpriteFrames_f6adi")
animation = &"Arm"
autoplay = "Default"
offset = Vector2(0, -1.69603)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14, 19)
rotation = -3.14159
scale = Vector2(2.01082, -1.77982)
shape = SubResource("RectangleShape2D_i08o8")

[node name="Timer" type="Timer" parent="."]

[node name="DEBUG_TEXT" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -76.0
offset_right = 17.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "DEBUG"
label_settings = SubResource("LabelSettings_8kpaj")
horizontal_alignment = 1
script = ExtResource("15_psrc6")

[connection signal="body_entered" from="Enemy_Kill_Zone" to="." method="enemy_kill_on_collision"]
[connection signal="Katshoot" from="BeingStateMachine/KatBeingState" to="." method="on_shoot"]
[connection signal="entered" from="BeingStateMachine/KatBeingState" to="DoingStateMachine" method="_on_persona_entered"]
[connection signal="transitioned" from="BeingStateMachine/KatBeingState" to="BeingStateMachine" method="on_child_transitioned"]
[connection signal="entered" from="BeingStateMachine/MaeBeingState" to="DoingStateMachine" method="_on_persona_entered"]
[connection signal="transitioned" from="BeingStateMachine/MaeBeingState" to="BeingStateMachine" method="on_child_transitioned"]
[connection signal="entered" from="DoingStateMachine/IdleDoingState" to="DEBUG_TEXT" method="debug_text_idle"]
[connection signal="transitioned" from="DoingStateMachine/IdleDoingState" to="DoingStateMachine" method="on_child_transitioned"]
[connection signal="entered" from="DoingStateMachine/JumpDoingState" to="DEBUG_TEXT" method="debug_text_jump"]
[connection signal="transitioned" from="DoingStateMachine/JumpDoingState" to="DoingStateMachine" method="on_child_transitioned"]
[connection signal="entered" from="DoingStateMachine/MoveDoingState" to="DEBUG_TEXT" method="debug_text_move"]
[connection signal="transitioned" from="DoingStateMachine/MoveDoingState" to="DoingStateMachine" method="on_child_transitioned"]
[connection signal="vectorChar" from="DoingStateMachine/MoveDoingState" to="." method="_on_move_doing_state_vector_char"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="DoingStateMachine" method="Poof_Done"]
[connection signal="animation_looped" from="AnimatedSprite2D/Arm" to="BeingStateMachine/KatBeingState" method="_on_arm_animation_looped"]
